--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@preline/dropdown": "^1.3.0",
     "axios": "^1.5.1",
+    "file-saver": "^2.0.5",
     "preline": "^1.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
